src/main/java/com/metadave/knowsql/parser/KnowSQLParser.java
// Generated from ./src/main/java/com/metadave/knowsql/parser/KnowSQL.g4 by ANTLR 4.0
package com.metadave.knowsql.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KnowSQLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELECT=1, FROM=2, WHERE=3, BETWEEN=4, AND=5, AT=6, SPLAT=7, COMMA=8, LPAREN=9, 
		RPAREN=10, EQUALS=11, SEMI=12, TRUE=13, FALSE=14, ID=15, INT=16, STRING=17, 
		LINE_COMMENT=18, COMMENT=19, WS=20;
	public static final String[] tokenNames = {
		"<INVALID>", "'select'", "'from'", "'where'", "'between'", "'and'", "'@'", 
		"'*'", "','", "'('", "')'", "'='", "';'", "'true'", "'false'", "ID", "INT", 
		"STRING", "LINE_COMMENT", "COMMENT", "WS"
	};
	public static final int
		RULE_prog = 0, RULE_select = 1, RULE_column_select = 2, RULE_where_clause = 3, 
		RULE_where_clause_exact = 4, RULE_where_clause_range = 5, RULE_where_value = 6, 
		RULE_bool = 7;
	public static final String[] ruleNames = {
		"prog", "select", "column_select", "where_clause", "where_clause_exact", 
		"where_clause_range", "where_value", "bool"
	};

	@Override
	public String getGrammarFileName() { return "KnowSQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public KnowSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public SelectContext select(int i) {
			return getRuleContext(SelectContext.class,i);
		}
		public List<SelectContext> select() {
			return getRuleContexts(SelectContext.class);
		}
		public TerminalNode EOF() { return getToken(KnowSQLParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(17); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(16); select();
				}
				}
				setState(19); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SELECT );
			setState(21); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectContext extends ParserRuleContext {
		public Token bucket;
		public TerminalNode WHERE() { return getToken(KnowSQLParser.WHERE, 0); }
		public Where_clauseContext where_clause() {
			return getRuleContext(Where_clauseContext.class,0);
		}
		public TerminalNode ID() { return getToken(KnowSQLParser.ID, 0); }
		public TerminalNode FROM() { return getToken(KnowSQLParser.FROM, 0); }
		public TerminalNode SELECT() { return getToken(KnowSQLParser.SELECT, 0); }
		public Column_selectContext column_select() {
			return getRuleContext(Column_selectContext.class,0);
		}
		public SelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).enterSelect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).exitSelect(this);
		}
	}

	public final SelectContext select() throws RecognitionException {
		SelectContext _localctx = new SelectContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_select);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23); match(SELECT);
			setState(24); column_select();
			setState(25); match(FROM);
			setState(26); ((SelectContext)_localctx).bucket = match(ID);
			setState(27); match(WHERE);
			setState(28); where_clause();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Column_selectContext extends ParserRuleContext {
		public TerminalNode ID(int i) {
			return getToken(KnowSQLParser.ID, i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(KnowSQLParser.COMMA, i);
		}
		public List<TerminalNode> ID() { return getTokens(KnowSQLParser.ID); }
		public List<TerminalNode> COMMA() { return getTokens(KnowSQLParser.COMMA); }
		public TerminalNode SPLAT() { return getToken(KnowSQLParser.SPLAT, 0); }
		public Column_selectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column_select; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).enterColumn_select(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).exitColumn_select(this);
		}
	}

	public final Column_selectContext column_select() throws RecognitionException {
		Column_selectContext _localctx = new Column_selectContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_column_select);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			switch (_input.LA(1)) {
			case SPLAT:
				{
				setState(30); match(SPLAT);
				}
				break;
			case ID:
				{
				{
				setState(31); match(ID);
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(32); match(COMMA);
					setState(33); match(ID);
					}
					}
					setState(38);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Where_clauseContext extends ParserRuleContext {
		public Where_clause_rangeContext where_clause_range() {
			return getRuleContext(Where_clause_rangeContext.class,0);
		}
		public Where_clause_exactContext where_clause_exact() {
			return getRuleContext(Where_clause_exactContext.class,0);
		}
		public Where_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_where_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).enterWhere_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).exitWhere_clause(this);
		}
	}

	public final Where_clauseContext where_clause() throws RecognitionException {
		Where_clauseContext _localctx = new Where_clauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_where_clause);
		try {
			setState(43);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(41); where_clause_exact();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(42); where_clause_range();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Where_clause_exactContext extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(KnowSQLParser.EQUALS, 0); }
		public Where_valueContext where_value() {
			return getRuleContext(Where_valueContext.class,0);
		}
		public TerminalNode ID() { return getToken(KnowSQLParser.ID, 0); }
		public Where_clause_exactContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_where_clause_exact; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).enterWhere_clause_exact(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).exitWhere_clause_exact(this);
		}
	}

	public final Where_clause_exactContext where_clause_exact() throws RecognitionException {
		Where_clause_exactContext _localctx = new Where_clause_exactContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_where_clause_exact);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); match(ID);
			setState(46); match(EQUALS);
			setState(47); where_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Where_clause_rangeContext extends ParserRuleContext {
		public Where_valueContext where_from;
		public Where_valueContext where_to;
		public Where_valueContext where_value(int i) {
			return getRuleContext(Where_valueContext.class,i);
		}
		public List<Where_valueContext> where_value() {
			return getRuleContexts(Where_valueContext.class);
		}
		public TerminalNode AND() { return getToken(KnowSQLParser.AND, 0); }
		public TerminalNode ID() { return getToken(KnowSQLParser.ID, 0); }
		public TerminalNode BETWEEN() { return getToken(KnowSQLParser.BETWEEN, 0); }
		public Where_clause_rangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_where_clause_range; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).enterWhere_clause_range(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).exitWhere_clause_range(this);
		}
	}

	public final Where_clause_rangeContext where_clause_range() throws RecognitionException {
		Where_clause_rangeContext _localctx = new Where_clause_rangeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_where_clause_range);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); match(ID);
			setState(50); match(BETWEEN);
			setState(51); ((Where_clause_rangeContext)_localctx).where_from = where_value();
			setState(52); match(AND);
			setState(53); ((Where_clause_rangeContext)_localctx).where_to = where_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Where_valueContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(KnowSQLParser.INT, 0); }
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public TerminalNode STRING() { return getToken(KnowSQLParser.STRING, 0); }
		public Where_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_where_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).enterWhere_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).exitWhere_value(this);
		}
	}

	public final Where_valueContext where_value() throws RecognitionException {
		Where_valueContext _localctx = new Where_valueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_where_value);
		try {
			setState(58);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(55); match(INT);
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(56); match(STRING);
				}
				break;
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 3);
				{
				setState(57); bool();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolContext extends ParserRuleContext {
		public TerminalNode FALSE() { return getToken(KnowSQLParser.FALSE, 0); }
		public TerminalNode TRUE() { return getToken(KnowSQLParser.TRUE, 0); }
		public BoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).enterBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KnowSQLListener ) ((KnowSQLListener)listener).exitBool(this);
		}
	}

	public final BoolContext bool() throws RecognitionException {
		BoolContext _localctx = new BoolContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bool);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
	}
}